name:              novproject
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.Development
                     Helpers.Request
                     Helpers.Crypto
                     Helpers.Mailer
                     Helpers.Facebook
                     Handler.All
                     Handler.Home
                     Handler.Tribes
                     Handler.Locations
                     Handler.Location
                     Handler.Workouts
                     Handler.Workout
                     Handler.Schedules
                     Handler.Schedule
                     Handler.Events
                     Handler.Event
                     Handler.Verbals
                     Handler.Verbal
                     Handler.Results
                     Handler.Result
                     Handler.Users
                     Handler.User
                     Handler.Verify
                     Handler.FacebookSessions
                     Handler.EmailSessions
                     Handler.Session
                     Handler.Forgot
                     Handler.UserMe
                     Handler.Reset
                     Type.EventModel
                     Type.VerbalUser
                     Type.ResultUser

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.0      && < 1.5
                 , yesod-core                    >= 1.4.0      && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 2.0        && < 2.2
                 , persistent-postgresql         >= 2.0        && < 2.2
                 , persistent-template           >= 2.0        && < 2.2
                 , template-haskell
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , http-types                    >= 0.8        && < 0.9
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.1
                 , data-default
                 , aeson                         >= 0.6        && < 0.9
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.3
                 , wai-logger                    >= 2.2        && < 2.3
                 , time                          >= 1.4        && < 1.5
                 , old-locale                    >= 1.0.0.6    && < 1.0.1
                 , esqueleto                     >= 2.1        && < 2.2
                 , unordered-containers          >= 0.2.4      && < 0.2.5
                 , DRBG                          >= 0.5        && < 0.6
                 , base64-bytestring             >= 1.0.0      && < 1.0.1
                 , HTTP                          >= 4000.2     && < 4000.3
                 , bcrypt                        >= 0.0.5      && < 0.0.6
                 , smtp-mail                     >= 0.1.4.5    && < 0.1.5
                 , wai-cors                      >= 0.2        && < 0.3
                 , wai                           >= 3.0.2      && < 3.1

    -- see https://github.com/yesodweb/yesod/issues/814
    if !os(windows)
        build-depends: unix

executable         novproject
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , novproject
                     , yesod

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    build-depends: base
                 , novproject
                 , yesod-test >= 1.4 && < 1.5
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
