name:              novproject
version:           2.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Model
                     Settings
                     Settings.Development
                     Helpers.Request
                     Helpers.Crypto
                     Helpers.Mailer
                     Helpers.Facebook
                     Helpers.Date
                     Helpers.TimeZone
                     Helpers.RecurringEvent
                     Handler.All
                     Handler.Home
                     Handler.Tribes
                     Handler.Tribe
                     Handler.Locations
                     Handler.Location
                     Handler.Workouts
                     Handler.Workout
                     Handler.Events
                     Handler.Event
                     Handler.Recurrings
                     Handler.Recurring
                     Handler.Verbals
                     Handler.Verbal
                     Handler.Results
                     Handler.Result
                     Handler.Users
                     Handler.User
                     Handler.Leaders
                     Handler.Leader
                     Handler.Verify
                     Handler.FacebookSessions
                     Handler.EmailSessions
                     Handler.Session
                     Handler.Forgot
                     Handler.UserMe
                     Handler.Reset
                     Handler.ProcessEvents
                     Type.EventModel
                     Type.RecurringModel
                     Type.VerbalUser
                     Type.ResultUser
                     Type.ErrorMessage

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.0      && < 1.5
                 , yesod-core                    >= 1.4.0      && < 1.5
                 , classy-prelude
                 , classy-prelude-conduit
                 , classy-prelude-yesod
                 , bytestring
                 , text
                 , persistent
                 , persistent-postgresql
                 , persistent-template
                 , template-haskell
                 , monad-control
                 , wai-extra
                 , yaml
                 , http-conduit
                 , http-types
                 , directory
                 , warp
                 , data-default
                 , aeson
                 , conduit
                 , monad-logger
                 , fast-logger
                 , wai-logger
                 , time
                 , esqueleto
                 , unordered-containers
                 , DRBG
                 , base64-bytestring
                 , HTTP
                 , bcrypt
                 , smtp-mail
                 , wai-cors
                 , wai
                 , file-embed
                 , tz

    -- see https://github.com/yesodweb/yesod/issues/814
    if !os(windows)
        build-depends: unix

executable         novproject
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, novproject

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N
